# imtoys

./: .gitignore  .gitmodules  CMakeLists.txt  Cloth-Simplification.sln  LICENSE  License.txt  README.md  RULE.md  TODO.md  for_mac.cmake  for_win.cmake
Cloth-Simplification/: Cloth-Simplification.vcxproj  Cloth-Simplification.vcxproj.filters  app_pref.json  back_upimgui.ini  fqms.h  framebuffer.h  glad.c  imgui.ini  main.cpp  qem.h  textures
Cloth-Simplification/Cloth-Simplification/lim/: app_pref.h  app_simplify.h  camera.h  mesh.h  (+6 more)
Cloth-Simplification/lim/: app_pref.h  app_simplify.h  application.h  camera.h  framebuffer.h  halfedge.h  imgui_modules.h  light.h  limclude.h  logger.h  map_baker.h  material.h  mesh.h  model.h  model_exporter.h  model_loader.h  program.h  scene.h  scene_first.h  simplify.h  simplify_app.h  texture.h  viewport.h  viewport_pack.h
Cloth-Simplification/shader/: bump.fs  const.fs  const.vs  diffuse.fs  diffuse.vs  fb_to_scr.fs  fb_to_scr.vs  ndl.fs  ndv.fs  ndv.vs  posnoruv.vs  red.frag  red.vert  textured.fs  textured.vs  uv.fs  uv_view.fs
imhdr/: main.cpp
imhdr.xcodeproj/: project.pbxproj
imhdr/lim/: app_hdr.h  application.h  asset_lib.h  framebuffer.h  imgui_modules.h  limclude.h  program.h  texture.h  viewport.h
imtoys/: imgui.ini  imtoys.vcxproj  imtoys.vcxproj.filters  main.cpp  pch.h
imtoys/imanims/: app_fluid.h  app_kinematics.h  app_nano.h  canvas.h
imtoys/imfluid/: app_fluid.h  canvas.h
imtoys/imhdr/: app_hdr.h  color_awared_image.h
imtoys/imnpr/: app_hatching.h  art_map.h  hatching.fs  hatching.vs
imtoys/impbr/: app_pbr.h
imtoys/imsimplification/: app_simplification.h  fqms.h  map_baker.h  simplify.h  viewport_pack.h
imtoys/imsnells/: app_snell.h
imtoys/imtests/: app_astar.h  app_gen_mesh.h  app_icp.h  app_snell.h  app_template.h  icp.cpp  icp.h  path_finder.h
imtoys/lim/: app_hdr.h  app_snell.h  application.h  framebuffer.h  imgui_modules.h  limclude.h  program.h  texture.h  viewport.h
imtoys/limbrary/: ICC.h  app_pref.h  application.h  asset_lib.h  asset_lib.inl  declaration.h  framebuffer.h  imgui_modules.h  limclude.h  logger.h  program.h  tex_renderer.h  texture.h  viewport.h
include/glad/: glad.h
lib/: glfw3.lib
limbrary/: README.md  diagram.drawio
limbrary-0.1/limbrary/: app_pref.cpp  app_pref.h  app_prefs.cpp  app_prefs.h  application.cpp  application.h  asset_lib.cpp  asset_lib.h  framebuffer.cpp  framebuffer.h  imgui_module.cpp  imgui_module.h  imgui_modules.h  limclude.h  limgui.cpp  limgui.h  log.cpp  log.h  logger.cpp  logger.h  program.cpp  program.h  texture.cpp  texture.h  utils.cpp  utils.h  viewport.cpp  viewport.h
limbrary/limbrary/: app_prefs.cpp  application.cpp  application.h  asset_lib.cpp  asset_lib.h  framebuffer.cpp  framebuffer.h  g_tools.cpp  g_tools.h  gl_tools.h  glm_tools.h  limclude.h  limgui.cpp  limgui.h  log.cpp  log.h  program.cpp  program.h  texture.cpp  texture.h  utils.h  viewport.cpp  viewport.h
limbrary/source/: application.cpp  framebuffer.cpp  program.cpp  texture.cpp
main/: app_pref.json  imgui.ini  main.cpp
main/assets/: imgui.ini
main/exports/: imgui.ini
main/im_anims/: app_bvh_parsor.cpp  app_bvh_parsor.h  app_cloth_coef.h  app_cloth_cpu.cpp  app_cloth_cpu.h  app_cloth_gpu.cpp  app_cloth_gpu.h  app_curve.cpp  app_curve.h  app_fluid.cpp  app_fluid.h  app_gpgpu.cpp  app_gpgpu.h  app_ik.cpp  app_ik.h  app_kinematics.cpp  app_kinematics.h  app_nano.cpp  app_nano.h  app_particle.cpp  app_particle.h  app_skeletal.cpp  app_skeletal.h  appbase_canvas3d.cpp  appbase_canvas3d.h  canvas.h  canvas3d_app.cpp  canvas3d_app.h  cloth_coef.h  imgui.ini
main/im_cam/: app_cam.cpp  app_cam.h  imgui.ini
main/im_curvature/: app_curvature.cpp  app_curvature.h  curvature.cpp  curvature.h  imgui.ini
main/im_hdr/: README.md  app_hdr.cpp  app_hdr.h  color_awared_image.h  imgui.ini
main/im_mine_sweeper/: app_mine_sweeper.cpp  app_mine_sweeper.h  locale.cpp  locale.h
main/im_model_viewer/: app_model_viewer.cpp  app_model_viewer.h  imgui.ini
main/im_npr/: app_hatching.cpp  app_hatching.h  imgui.ini
main/im_pbd/: app_pbd.cpp  app_pbd.h  app_pbd_cpu.cpp  app_pbd_cpu.h  app_pbd_gpu.cpp  app_pbd_gpu.h  app_softbody_in_model.cpp  app_softbody_in_model.h  imgui.ini
main/im_pbr/: app_pbr.cpp  app_pbr.h
main/im_physics/: app_phy2d.cpp  app_phy2d.h
main/im_ray/: app_ray.cpp  app_ray.h  imgui.ini
main/im_sdf_modeler/: TODO.md  app_sdf_modeler.cpp  app_sdf_modeler.h  combination.h  imgui.ini  object.h  sdf.h  sdf_bridge.h  sdf_format.cpp  sdf_global.h  sdf_lib.cpp  sdf_lib.h  sdf_marching_cube.cpp  sdf_obj.h  sdf_sd_world.cpp
main/im_shadertoy/: app_shadertoy.cpp  app_shadertoy.h  imgui.ini
main/im_simplification/: app_save.json  app_simplification.cpp  app_simplification.h  fqms.h  imgui.ini  map_baker.cpp  map_baker.h  simplify.cpp  simplify.h  viewport_pack.cpp  viewport_pack.h
main/im_tests/: app_astar.cpp  app_astar.h  app_font.cpp  app_font.h  app_gen_mesh.cpp  app_gen_mesh.h  app_gpgpu.cpp  app_gpgpu.h  app_icp.cpp  app_icp.h  app_imgui_test.cpp  app_imgui_test.h  app_moving_window.cpp  app_moving_window.h  app_scene3d.cpp  app_scene3d.h  app_template.cpp  app_template.h  app_walkie.cpp  app_walkie.h  imgui.ini  path_finder.h
main/imanims/: app_fluid.cpp  app_fluid.h  app_kinematics.cpp  app_kinematics.h  app_nano.cpp  app_nano.h  canvas.h
main/imhdr/: app_hdr.cpp  app_hdr.h  color_awared_image.h
main/imnpr/: app_hatching.cpp  app_hatching.h
main/impbr/: app_pbr.cpp  app_pbr.h
main/imsimplification/: README.md  app_simplification.cpp  app_simplification.h  fqms.h  map_baker.h  simplify.h  viewport_pack.h
main/imtests/: app_astar.cpp  app_astar.h  app_font.cpp  app_font.h  app_gen_mesh.cpp  app_gen_mesh.h  app_icp.cpp  app_icp.h  app_imgui_test.cpp  app_imgui_test.h  app_template.cpp  app_template.h
main/shaders/: amiga_ground.fs  mvp_no_out.vs  ndl.fs  ndv.fs
vender/glad-gl4.6-core/: glad-gl4.6-core.vcxproj  glad-gl4.6-core.vcxproj.filters
vender/imgui-docking-1.89.4/: imgui-docking-1.89.4.vcxproj  imgui-docking-1.89.4.vcxproj.filters
(+383 files in other folders)
